project/logs/20250622_190108.log
Using adapter: NVIDIA GeForce RTX 4060 Laptop GPU

Feature Level: 12.2

Complete create D3D12Device!
Begin CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Qembed_debug:11:1: error: unknown type name 'VertecShaderOutput'; did you mean 'VertecShaderOutPut'?
VertecShaderOutput main(VertecShederInput input)
^~~~~~~~~~~~~~~~~~
VertecShaderOutPut
Qembed_debug:1:8: note: 'VertecShaderOutPut' declared here
struct VertecShaderOutPut
       ^
Qembed_debug:13:5: error: unknown type name 'VertecShaderOutput'; did you mean 'VertecShaderOutPut'?
    VertecShaderOutput output;
    ^~~~~~~~~~~~~~~~~~
    VertecShaderOutPut
Qembed_debug:1:8: note: 'VertecShaderOutPut' declared here
struct VertecShaderOutPut
       ^

Complete CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Begin CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

Complete CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

